TAG:egload-6-0-22-2
DATE: 11/08/2023
STAFF: lec
wts2-1324/fl2-625/egload pipeline issue/add sanity check
bin/egload.sh : call ${PG_DBUTILS}/bin/testRadarEntrezGene.csh

TAG:egload-6-0-22-1
DATE: 05/03/2023
STAFF: sc
fl2-253/PAR NCBI ID issue (part 7): add PAR post EG load processing

TAG:egload -6-0-17-1
DATE: 05/11/2021
STAFF: sc
CHANGES: TR13349 Build39

TAG: egload-6-0-16-2
DATE: 04/26/2021
STAFF: dbm
1) egload.config.default: removed APP_QCRPT
2) egload.sh: removed call to QC report script

TAG: egload-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: egload-6-0-11-1
DATE: 12/04/2017
STAFF: sc
CHANGES: TR12741
1)egload ran out of memory, upped heap memory to 2G min/max
  in config

TAG: egload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: egload-6-0-5-1
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key != 2  changed to "= 1"

TAG: egload-6-0-4-1
DATE: 04/29/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: egload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: egload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: egload-tr11750-BP
DATE: 04/28/2015
STAFF: kstone

TAG: egload-5-1-1-1
DATE: 11/02/2012
STAFF: dbm
CHANGES:
1) Config changes for TR11163

TAG: egload-5-0-0-2
TAG: egload-5-0-0-1
DATE: 04/09/2012
STAFF: lec
CHANGES: 
1) bin/formatreports.py
   fix call of mgiAndor->report_db.create_accession_anchor

TAG: egload-4-4-1-2
DATE: 03/21/2011
STAFF: lec
CHANGES: TR10635
	 move bucket_zero_to_one_mgiid (with mgi ids) 
	 move create bucket_zero_to_one_nomgiid (without mgi ids)
	 from ".sh" to ".py"

TAG: egload-4-4-1-1
DATE: 02/01/2011
STAFF: lec
CHANGES: TR10564/bin/formatreports.sh
	 create bucket_zero_to_one_mgiid (with mgi ids)
	 create bucket_zero_to_one_nomgiid (without mgi ids)

TAG: egload-4-3-3-2
DATE: 04/27/2010
STAFF: lec