@@ -1,10 +1,16 @@
-TAG:egload-6-0-22-2
+TAG: egload-6-0-24-1
+DATE: 11/09/2024
+STAFF: lec
+e4g/Software upgrades analysis: Postgres 17/NCBIGMQuery.java
+# modified:   java/org/jax/mgi/dbs/mgd/query/NCBIGMQuery.java
+
+TAG: egload-6-0-22-2
 DATE: 11/08/2023
 STAFF: lec
 wts2-1324/fl2-625/egload pipeline issue/add sanity check
 bin/egload.sh : call ${PG_DBUTILS}/bin/testRadarEntrezGene.csh
 
-TAG:egload-6-0-22-1
+TAG: egload-6-0-22-1
 DATE: 05/03/2023
 STAFF: sc
 fl2-253/PAR NCBI ID issue (part 7): add PAR post EG load processing
